k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-svc
spec:
  selector:
    app: petclinic
  ports:
  - port: 80
    targetPort: 8080
  type: NodePort
